--- a/assets/css/habitos.css
+++ b/assets/css/habitos.css
@@ -23,7 +23,7 @@ body::before {
     left: 0;
     width: 100%;
     height: 100%;
-    background-image: url(/assets/img/texture.png);
+    background-image: url(../img/texture.png);
     background-size: cover;
     background-position: center;
     opacity: 0.12;
