--- a/assets/css/calc-imc.css
+++ b/assets/css/calc-imc.css
@@ -48,8 +48,9 @@ p {
 
 .background-conteudo{
     background-color: rgb(255, 255, 255);
-    margin-left: 15vw;
-    margin-right: 15vw;
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 0 2rem;
     min-height: 100vh;
     overflow: hidden;
     box-shadow:
@@ -146,7 +147,7 @@ p {
 
 .area-calc{
     display: flex;
-    height: 450px;
+
     margin-left: 15px;
     margin-right: 15px;
     justify-content: center;
@@ -161,7 +162,7 @@ p {
     flex-direction: column;
     background: linear-gradient(to right, #4faffd, #30d6ff);
     padding: 5vh;
-    height: 30vh;
+    height: 250px;
     border-radius: 15px;
     gap: 10px;
     box-shadow:
